(numbers in brackets normally mean the mantis ticket ID)

-- 101.0 --------------------------------------------------------

General:
 ! change default screenshot file type to jpg. to create png use /screenshot png
 ! pr-downloader dependency is now mandatory (statically linked with spring)
 ! demo files are now compressed with gzip

Lua:
 ! {Set,Get}UnitPieceCollisionVolumeData now receive 1-based piece index argument (was 0-based).
 ! Lua{Feature,Unit}Defs:
   LuaFeatureDefs: make the "model" subtable available (as it is for LuaUnitDefs)
   move the {min,max,mid}{x,y,z} values to this table (these can now be accessed
   using e.g. *Defs[i].model.midx)
   deprecate *Defs[i].modelname, use *Defs[i].model.path instead
 ! Game.groundAmbientColor, Game.groundSpecularColor and Game.groundSunColor
   are no longer available, use gl.GetSun() instead with appropriate parameters
 ! GameID callin now gets the ID string encoded in hex.
 ! Weapons with tracking will use a radar dot position unless
   Spring.SetProjectileIgnoreTrackingError(projID, bool ignore) is called.
 ! UnitDestroyed is now called twice and gets an extra argument 'preEvent'
   the value of preEvent is true for the first call which corresponds to
   the old UnitDestroyed and false for the second (allows shaders during
   death anims, etc; after the second call a unitID is no longer valid!)
   also remove hardcoded logic to zombify (stun+immobilize) a unit on death
 ! ShieldPreDamaged will now be called for LightningCannon and BeamLaser.
   Two new arguments were added: beamCarrierWeaponNum and beamCarrierUnitID.
   These will be populated in place of the first argument (projID).

 ! gl.UnitShape and gl.FeatureShape now take three extra boolean arguments
   and set their relevant GL state internally (so that calling only these
   functions is enough to get correctly rendered models; pass in 'false'
   for the [new] THIRD argument to get the fixed behavior, omit it or pass